--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@ http://www.templatemo.com/tm-512-moonlight
 
         <div class="footer">
           <div class="content">
-              <p>Copyright &copy; 2022 . <a href="http://www.templatemo.com/tm-512-moonlight">Chaiyapat Pongtee</a></p>
+              <p>Copyright &copy; 2022 . <a href="#">Chaiyapat Pongtee</a></p>
           </div>
         </div>
 
